# OppNDA

./: .gitignore  CONTRIBUTING.md  DOCUMENTATION_INDEX.md  Dockerfile  GUI_IMPROVEMENTS_SESSION.md  LICENSE  ONE_PARAMETERS.md  OppNDA.py  PERFORMANCE.md  QUICK_REFERENCE.md  README.md  docker-compose.yml  pyproject.toml  requirements.txt  run.py
.github/: PULL_REQUEST_TEMPLATE.md
GUI/: auto-save.js  config.js  config.js_append  config.js_fragment  config.js_restore  console-log.js  directory-browser.css  directory-browser.js  nda.css  nda.html  pattern-builder.js  settings-modern.css  settings.css  settings.html  styles.css
app/: __init__.py  api.py  routes.py
config/: analysis_config.json  averager_config.json  batch_config.json  gui_options.json  regression_config.json  verification_config.json
core/: __init__.py  analysis.py  averager.py  batch.py  path_utils.py  regression.py  resource_manager.py
docs/: OppNDA_tutorial.tex  changelog.rst  conf.py  contributing.rst  developer_guide.rst  index.rst  installation.rst  quickstart.rst
examples/: README.md  analysis.py  analysis_config.json  analysis_epidemic.json  analysis_multi_router.json  batch_avg.py  batch_config.json  batch_processing.json  regression_config.json  regression_model.json
reports/: LowerCase_ProphetRouter_average.txt  MessageStatsReport_EpidemicRouter_100_buffer_average.txt  MessageStatsReport_EpidemicRouter_104_ttl_average.txt  MessageStatsReport_EpidemicRouter_10M_buffer_average.txt  MessageStatsReport_EpidemicRouter_120_ttl_average.txt  MessageStatsReport_EpidemicRouter_60_ttl_average.txt  (+2238 more)
(+52 files in other folders)
